best-practices-vpol/disallow-latest-tag/.kyverno-test-scope/resource.yaml
apiVersion: v1
kind: Pod
metadata: {name: exception-latest-pod, namespace: default}
spec:
  containers: [{name: app, image: nginx:latest}]
---
apiVersion: v1
kind: Pod
metadata: {name: exception-latest-pod, namespace: team-b}
spec:
  containers: [{name: app, image: nginx:latest}]
