best-practices-vpol/disallow-latest-tag/.kyverno-test/exceptions.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: disallow-latest-tag-exception
  namespace: policy-exceptions
spec:
  policyRefs:
  - kind: ValidatingPolicy
    name: disallow-latest-tag
  matchConditions:
  - name: exact-resource
    expression: object.kind == 'Pod' && object.metadata.namespace == 'default' && (object.metadata.name == 'exception-latest-pod')
  images:
  - nginx:latest
