best-practices-vpol/disallow-latest-tag/disallow-latest-tag.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: disallow-latest-tag
  annotations:
    policies.kyverno.io/title: Disallow Latest Tag in VPOL
    policies.kyverno.io/category: Best Practices in VPOL
    policies.kyverno.io/minversion: 1.17.0
    kyverno.io/kubernetes-version: "1.30"
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      The ':latest' tag is mutable and can lead to unexpected errors if the
      image changes. A best practice is to use an immutable tag that maps to
      a specific version of an application Pod. This policy validates that the image
      specifies a tag and that it is not called `latest`. Checks containers,
      initContainers, and ephemeralContainers.
spec:
  validationActions: [Audit]
  evaluation: 
     background: 
           enabled: true
  matchConstraints:
        resourceRules:
          - apiGroups: ['']
            apiVersions: [v1]
            operations: [CREATE, UPDATE]
            resources: [pods]
  variables:
          - name: allContainers
            expression: "object.spec.containers + object.spec.?initContainers.orValue([]) + object.spec.?ephemeralContainers.orValue([])"
  validations:
          - expression: "variables.allContainers.all(container, container.image.contains(':'))"
            message: "An image tag is required."
          - expression: "variables.allContainers.all(container, !container.image.endsWith(':latest'))"
            message: "Using a mutable image tag e.g. 'latest' is not allowed."
